--- a/projects/arcapture/index.html
+++ b/projects/arcapture/index.html
@@ -35,14 +35,10 @@
 							<img src="https://unfussy.org/projects/arcapture/arccover.png" />
 							<div class="projects-list__infos flex flex-wrap">
 								<div class="projects-list__desc">
-
-									<p>
-										As Hover expanded from pros to homeowners, new users frequently bounced during
-										their first capture. <span class="hblack">ARCapture</span> creates a visual
-										feedback loop between user inputs &amp; our CV backend, ensuring beginner's luck
-										for everyone.
-
-									</p>
+									<span class="hblack">ARCapture</span>
+									<span>
+										&nbsp;·&nbsp; CV guided  capture
+									</span>
 								</div>
 							</div>
 						</div>
@@ -61,30 +57,26 @@
 									<video src="https://unfussy.org/projects/arcapture/arcvideo.mp4" width="2000"
 										height="2000" muted="" playsinline="" loop=""></video>
 								</div>
-								<div class="projects-list__infos flex flex-wrap">
-									<div class="projects-list__desc">
-										<div class="flexgroup">
-											<div class="flexcol1">
-												<p class="flexp">
-													All we need is 8 photos showing each side and corner of
-													the home—
-													harder than it sounds. We took advantage of LIDAR &
-													on-device
-													CV reconstruction to guide homeowners towards a good capture with no
-													blind spots.
-												</p>
-											</div>
-											<div class="flexcol2">
-												<p class="flexp">
-													&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-												</p>
-											</div>
 
-										</div>
-
-									</div>
-								</div>
 							</section>
+
+							<!--copy post-->
+							<div class="project__media project_copy fullheight lazy-container" data-src=""
+								data-final-width="0" data-width="600" data-height="1000"
+								style="width: 600px; padding-right: 1rem; background:#fff;">
+								<p>
+									As Hover expanded from pros to homeowners, new users frequently bounced during
+									their first capture. <span class="hblack">ARCapture</span> creates a visual
+									feedback loop between user inputs &amp; our CV backend, ensuring beginner's luck
+									for everyone.</p><br />
+								<p>
+									All we need is 8 photos showing each side and corner of
+									the home—
+									harder than it sounds. We took advantage of LIDAR &
+									on-device
+									CV reconstruction to guide homeowners towards a good capture with no
+									blind spots.</p><br />
+							</div>
 
 						</section>
 					</div>
