--- a/projects/breaker/index.html
+++ b/projects/breaker/index.html
@@ -36,18 +36,28 @@
 							<img src="https://unfussy.org/projects/breaker/breakerCover.png" />
 							<div class="projects-list__infos flex flex-wrap">
 								<div class="projects-list__desc">
-									<p>
-										<span class="hblack">Breaker</span> unlocks safe and frequent user-testing. It
-										allows experimental features to be toggled live without breaking
-										production, then rolled out to users in cohorts. We were tired of waiting for
-										split.io to be invented, so we made it ourselves.
-									</p>
+									<span class="hblack">Breaker</span>
+									<span>
+										&nbsp;·&nbsp; Scratch-made feature flagging
+									</span>
 								</div>
 							</div>
 						</div>
 
 						<!--container for below the fold media-->
 						<section class="project__medias flex">
+
+							<!--copy post-->
+							<div class="project__media project_copy fullheight lazy-container" data-src=""
+								data-final-width="0" data-width="600" data-height="1000"
+								style="width: 600px; padding-right: 1rem; background:#fff;">
+								<p>
+									Breaker unlocks safe and frequent user-testing. It
+									allows experimental features to be toggled live without breaking
+									production, then rolled out to users in cohorts. We were tired of waiting for
+									split.io to be invented, so we made it ourselves.</p>
+
+							</div>
 
 							<!--video post-->
 							<section class="project__media video-section" data-width="3088" data-height="2052"
