--- a/projects/hovercad/index.html
+++ b/projects/hovercad/index.html
@@ -37,9 +37,7 @@
 								<div class="projects-list__desc">
 									<span class="hblack">HoverCAD</span>
 									<span>
-										is human-first, AI assisted 3D modeling. Starting with a blank sheet, we slashed
-										Hover's
-										unit cost by 75% in the first two years.
+										&nbsp;·&nbsp; Human-first, AI assisted 3D modeling
 									</span>
 								</div>
 							</div>
@@ -47,6 +45,30 @@
 
 						<!--container for below the fold media-->
 						<section class="project__medias flex">
+
+							<!--copy post-->
+							<div class="project__media project_copy fullheight lazy-container" data-src=""
+								data-final-width="0" data-width="600" data-height="1000"
+								style="width: 600px; padding-right: 2rem; background:#fff;">
+								<p>
+									Starting with a blank sheet, we slashed
+									Hover's
+									unit cost by 75% in the first two years.</p><br />
+								<p>
+									Core features include interactive photogrammetry for solving camera
+									networks, CV surface texturing and ML-powered feature
+									recognition. We started with a core suite of parametric tools, taking advantage
+									of deep knowledge of our user's process in other modeling apps.</p><br />
+								<p>
+									We used property data, local code, and CV to
+									predict
+									gutter locations and paths while a user draws. Automation only
+									makes
+									suggestions when they're likely to be helpful.
+								</p>
+
+							</div>
+
 
 							<!--video post-->
 							<section class="project__media video-section" data-width="3282" data-height="2160"
@@ -57,25 +79,6 @@
 									no-repeat;"></div>
 									<video src="https://unfussy.org/projects/hovercad/tour.mp4" width="3282"
 										height="2160" muted="" playsinline="" loop=""></video>
-								</div>
-								<div class="projects-list__infos flex flex-wrap">
-									<div class="projects-list__desc">
-										<div class="flexgroup">
-											<div class="flexcol1">
-												<p class="flexp">
-													Core features include interactive photogrammetry for solving camera
-													networks, CV surface texturing &amp; ML-powered feature
-													recognition.
-												</p>
-											</div>
-											<div class="flexcol2">
-												<p class="flexp">
-													We started with a core suite of parametric tools, taking advantage
-													of deep knowledge of our user's process in other modeling apps.
-												</p>
-											</div>
-										</div>
-									</div>
 								</div>
 							</section>
 
@@ -89,27 +92,6 @@
 										no-repeat;"></div>
 									<video src="https://unfussy.org/projects/hovercad/gutters.mp4" width="3284"
 										height="2162" muted="" playsinline="" loop=""></video>
-								</div>
-								<div class="projects-list__infos flex flex-wrap">
-									<div class="projects-list__desc">
-										<div class="flexgroup">
-											<div class="flexcol1">
-												<p class="flexp">
-													We used property data, local code, &amp; CV to
-													predict
-													gutter locations &amp; paths while a user draws. Automation only
-													makes
-													suggestions when they're likely to be helpful.
-												</p>
-											</div>
-											<div class="flexcol2">
-												<p class="flexp">
-													&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-												</p>
-											</div>
-
-										</div>
-									</div>
 								</div>
 							</section>
 
