--- a/projects/studio/index.html
+++ b/projects/studio/index.html
@@ -41,13 +41,10 @@
 							</div>
 							<div class="projects-list__infos flex flex-wrap">
 								<div class="projects-list__desc">
-									<p>
-										I joined the <span class="hblack">Design Studio</span> team to help
-										refresh &amp; expand a mobile-only prototype to tablet &amp; web. I added a
-										suite of custom icons, updated 3D, &amp; a new navigation style for
-										larger screens. I also fulfilled a popular user request by adding dark
-										mode.
-									</p>
+									<span class="hblack">Design Studio</span>
+									<span>
+										&nbsp;·&nbsp; A configurator for your home
+									</span>
 								</div>
 							</div>
 						</section>
@@ -56,6 +53,19 @@
 
 						<!--container for below the fold media-->
 						<section class="project__medias flex">
+
+							<!--copy post-->
+							<div class="project__media project_copy fullheight lazy-container" data-src=""
+								data-final-width="0" data-width="600" data-height="1000"
+								style="width: 600px; padding-right: 1rem; background:#fff;">
+								<p>
+									I joined the Design Studio team to help
+									refresh and expand a mobile-only prototype to tablet and web. I added a
+									suite of custom icons, updated 3D, and a new navigation style for
+									larger screens. I also fulfilled a popular user request by adding dark
+									mode.</p><br />
+								
+							</div>
 
 							<!--image post-->
 							<div class="project__media fullheight lazy-container"
