--- a/projects/designsystems/index.html
+++ b/projects/designsystems/index.html
@@ -35,12 +35,10 @@
 							<img src="https://unfussy.org/projects/designsystems/cover.png" />
 							<div class="projects-list__infos flex flex-wrap">
 								<div class="projects-list__desc">
-									<p>
-										My ARG style guide was used to pilot <span class="hblack">design systems</span>
-										at Hover. I partnered with
-										FE to build a comprehensive component library in React/Redux.
-
-									</p>
+									<span class="hblack">Design Systems</span>
+									<span>
+										&nbsp;·&nbsp; Pilot in Figma, React/Redux
+									</span>
 								</div>
 							</div>
 						</div>
@@ -48,31 +46,28 @@
 						<!--container for below the fold media-->
 						<section class="project__medias flex">
 
+							<!--copy post-->
+							<div class="project__media project_copy fullheight lazy-container" data-src=""
+								data-final-width="0" data-width="600" data-height="1000"
+								style="width: 600px; padding-right: 1rem; background:#fff;">
+								<p>
+									My ARG style guide was used to pilot design systems
+									at Hover. I partnered with
+									FE to build a comprehensive component library in React/Redux.</p><br />
+								<p>
+									Development velocity spiked as the library grew. We
+									eventually found some features could be developed with no new
+									presentation code. It wasn't long before Hover invested in a
+									dedicated team to replicate our results company-wide.</p><br />
+
+							</div>
+
 							<!--image post-->
 							<div class="project__media fullheight lazy-container"
 								data-src="https://unfussy.org/projects/designsystems/ds.png" data-final-width=""
 								data-width="10371" data-height="3338" style="width:10371px">
 								<img src="https://unfussy.org/projects/designsystems/ds.png" />
-								<div class="projects-list__infos flex flex-wrap">
-									<div class="projects-list__desc">
-										<div class="flexgroup">
-											<div class="flexcolds">
-												<p class="flexp">
-													Development velocity spiked as the library grew. We
-													eventually found some features could be developed with no new
-													presentation code. It wasn't long before Hover invested in a
-													dedicated team to replicate our results company-wide.
-												</p>
-											</div>
-											<div class="flexcol2">
-												<p class="flexp">
-													&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-												</p>
-											</div>
 
-										</div>
-									</div>
-								</div>
 							</div>
 
 						</section>
