--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body class="template-home" data-site-url="https://unfussy.org">
 	<main class="site-main flex flex-column fullheight">
-		<scrollbar-component></scrollbar-component>
+		<!--<scrollbar-component></scrollbar-component>
 		<section class="projects-list flex">
 
 			<hovercad-collapsed></hovercad-collapsed>
@@ -41,7 +41,7 @@
 			<studio-collapsed></studio-collapsed>
 			<breaker-collapsed></breaker-collapsed>
 
-		</section>
+		</section>-->
 		<footer-component></footer-component>
 	</main>
 </body>
