--- a/hovercad.html
+++ b/hovercad.html
@@ -181,8 +181,7 @@
           <div class="bigbody">More Focused Tooling</div>
           <div class="body ch65">Early gains came from parametric modeling. We studied how our users draw an object in
             open CAD, then reduced that process to it&#x27;s core steps.<br><br>Windows, for example. Drawing from
-            scratch with lines and rectangles is tedious. But the process is suprisingly organized.<br><br>They can be
-            drawn using rectangles and lines any number of ways, but the result is surprisingly organized.<br><br>Our
+            scratch with lines and rectangles is tedious. But the process is suprisingly organized.<br><br>Our
             tool progresses from general (what shape?) to specific (how many panes?) without interruption. Once the
             first window is drawn, others on the same house are easy. Just duplicate, tweak a parameter or two without
             disrupting the others. SketchUp could never.<br>‍<br>A single window was once 5 minutes of work, now
